
25/01/2007 JK
        - Corrected correlated flux normalization in D-Chooz_far.glb
          from 2.0% to 2.8%

**********Version 3.0.8

29/03/2007 JK
        - Corrected a bug in the glb_likelihood: In the calculation
          of the Poisson chi^2, the "true" and fitted rates were
          exchanged. This has a visible effect only for very small
          event rates.

17/04/2007 JK
        - Fixed a small bug in glbDefaultExp, leading to a possible read
          beyond array boundaries of smear_data[0]->bin_center 


**********Version 3.0.9

24/05/2007 PH
	- Fixed BUG#18

**********Version 3.0.10
29/06/2007 JK
        - Fixed another potential problem in glb_likelihood (chi^2 could
          become negative for true_rate=0, fit_rate<0)
        - Fixed problem in glbShiftEnergyScale: for negative shifts, the
          leftmost bin was always set to 0, instead of some interpolation
          between 0 and its original value. This is not a big problem, but
          it leads to glb_likelihood returning 1e200, which can confuse
          the minimizer if it happens in the very first evaluation of chi^2.
        - Added DocPlots.nb to the distribution

**********Version 3.0.11
13/09/2007 JK
        - Removed libstdc++ from Makefile in source directory         
 	- Declared fa, fb, fc and fu as long double in
 	  glb_hybrid_bracket to avoid problems with extra floating
 	  point digits on x86 CPUs (in the case of flat directions in
 	  parameter space, comparisons could yield wrong results if
 	  the operands were identical, but one of them was stored in
 	  main memory while the other was retained in the floating
 	  point registers). See also http://gcc.gnu.org/bugzilla/,
 	  entry No. #323.

**********Version 3.0.12
13/02/2008 PH
	- Fixed BUG#19


07/07/2008 JK
        - Fixed bug in glb_fluxes.c: Wrong number of flux bins (501
          instead of 500) had been used in glb_flux_calc. See BUG#20.

**********Version 3.0.13
16/07/08 PH
