@@ -97,3 +97,7 @@
 **********Version 3.0.13
 16/07/08 PH
 
+09/08/2008 JK
+        - Removed "inline" keywords from declaration of zhetrd3
+          (tentatively fixes BUG#22)
+
